fixed hover bubble overflow

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -85,7 +85,7 @@ body {
 
   .content {
     margin: 0 auto;
-    overflow: auto;
+    // overflow: auto;
     position: relative;
     width: $content-width;
   }
